feat: add new tests for usercases/users and user_repository

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,9 +2,13 @@ AllCops:
   NewCops: enable
   Exclude:
     - 'db/*/**'
+    - 'config/environment'
 
 Style/StringLiterals:
   Enabled: false
 
 Style/Documentation:
+  Enabled: false
+
+Style/GlobalVars:
   Enabled: false
